fix graph problem on mobile

--- a/web/frontend/src/style.css
+++ b/web/frontend/src/style.css
@@ -9,6 +9,7 @@
     margin: 24px 16px;
     padding: 24px;
     min-height: 280px;
+    max-width: calc(100vw - 104px);
 }
 
 /* Hack para poder conseguir usar paginação com cursor em vez de offset */
